<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello instant noodles fans!</string>
    <string name="app_name">iNoodles</string>
    <string name="main">Main</string>
    <string name="review">Review</string>
    <string name="lista">List</string>
    <string name="aroma">Aroma</string>
    <string name="picante">Picante</string>
    <string name="total">Total</string>
    <string name="introduceCB">Introduce el código de barras y pulsa el botón!NEGRO!!</string>
</resources>
