<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:baselineAligned="false" 
  android:background="#FFFFFF" 
  android:clipChildren="false" 
  android:orientation="vertical">
    <ImageView	android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:src="@drawable/ramen" 
    			android:id="@+id/imageView1" 
    			android:adjustViewBounds="true" 
    			android:maxHeight="100px" 
    			android:scaleType="fitXY">
    </ImageView>
    <TextView	android:id="@+id/textView2" 
    			android:layout_width="fill_parent" 
    			android:layout_height="wrap_content" 
    			android:text="Código de Barras:" 
    			android:textColor="#550000" 
    			android:textSize="15sp">
    </TextView>
    <TextView 	android:text="TextView" 
    			android:id="@+id/textView1" 
    			android:layout_width="fill_parent" 
    			android:layout_height="wrap_content" 
    			android:textSize="20sp" 
    			android:textColor="#000022" 
    			android:gravity="center">
    </TextView>
    
    <LinearLayout   android:layout_width="match_parent" 
    				android:layout_height="wrap_content" 
    				android:id="@+id/linearLayout1">
        <LinearLayout	android:layout_width="wrap_content" 
        				android:layout_height="match_parent" 
        				android:id="@+id/linearLayout2">
            <TextView	android:text="@string/aroma" 
            			android:id="@+id/textView3" 
            			android:layout_width="wrap_content" 
            			android:layout_height="wrap_content"
            			android:textColor="#000000" >
            </TextView>
            <RatingBar	android:id="@+id/ratingAroma" 
            			android:layout_width="wrap_content" 
            			android:layout_height="wrap_content"
            			android:numStars="5"
            			android:stepSize="0.5"
            			android:isIndicator="true">
            </RatingBar>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout	android:layout_width="match_parent" 
    				android:layout_height="wrap_content" 
    				android:id="@+id/linearLayout3">
        <TextView	android:text="@string/picante" 
        			android:id="@+id/textView4" 
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:textColor="#000000">
        </TextView>
        <RatingBar	android:id="@+id/ratingPicante"
					android:stepSize="0.5"
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:isIndicator="true">
        </RatingBar>
    </LinearLayout>
    
    <LinearLayout	android:layout_width="match_parent" 
    				android:layout_height="wrap_content" 
    				android:id="@+id/linearLayout4">
        <TextView	android:text="@string/total" 
        			android:id="@+id/textView5" 
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:textColor="#000000">
        </TextView>
        <RatingBar	android:id="@+id/ratingTotal"
					android:stepSize="0.5"
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:isIndicator="true">
        </RatingBar>
    </LinearLayout>
    
        <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            <LinearLayout	android:layout_width="match_parent" 
    						android:layout_height="wrap_content" 
    						android:id="@+id/linearComments"
    						android:orientation="vertical">
    						    <TextView	android:id="@+id/textView2" 
    			android:layout_width="fill_parent" 
    			android:layout_height="wrap_content" 
    			android:text="Código de Barras:" 
    			android:textColor="#550000" 
    			android:textSize="15sp">
    			</TextView>
    		</LinearLayout>
    </ScrollView>
    
    <Button android:id="@+id/button1" 
       		android:layout_height="wrap_content" 
       		android:layout_width="fill_parent" 
       		android:onClick="onMainClick" 
       		android:text="Main" 
       		android:textColor="#00FF00" 
       		android:textColorHint="#FF0000" 
       		android:textSize="60sp">
       		</Button>
   </LinearLayout>
